syntax = "proto3";

package example;

option go_package = "api/proto/example";

service ExampleService {
  rpc ExampleMethod (ExampleRequest) returns (ExampleResponse) {}
}

message ExampleRequest {
  string example_field = 1;
}

message ExampleResponse {
  string example_field = 1;
}